created modular cta and large focus components

--- a/src/index.css
+++ b/src/index.css
@@ -9,8 +9,8 @@ html {
 }
 
 body {
-  font-size: 1.5em;
-  line-height: 2.5em;
+  font-size: 1.5rem;
+  line-height: 2.5rem;
   color: #000000;
   margin: 0;
   font-family: "Manrope", "Helvetica Neue", sans-serif;
