created product presentation & sub-components, created CurrentProductContext

--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@ html {
 body {
   font-size: 1.5rem;
   line-height: 2.5rem;
-  color: #000000;
+  color: #7d7d7d;
   margin: 0;
   font-family: "Manrope", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
